syntax = "proto3";

package spine.test.tools.validate;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.tools.validate";
option java_outer_classname = "RequiredProto";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

message Singulars {

    int32 required_numbers_are_not_validated = 1 [(required) = true];

    string not_empty_string = 2 [(required) = true];

    bytes one_or_more_bytes = 3 [(required) = true];

    UltimateChoice not_vegetable = 4 [(required) = true];

    Enclosed not_default = 5 [(required) = true];
}

message Collections {

    repeated uint64 not_empty_list_of_longs = 1 [(required) = true];

    map<int32, int32> not_empty_map_of_ints = 2 [(required) = true];

    map<string, string> contains_a_non_empty_string_value = 3 [(required) = true];

    repeated UltimateChoice at_least_one_piece_of_meat = 4 [(required) = true];
}

message AlwaysInvalid {

    google.protobuf.Empty impossible = 1 [(required) = true];
}

enum UltimateChoice {

    VEGETABLE = 0;

    CHICKEN = 1;

    FISH = 2;
}

message Enclosed {

    string value = 1;
}
